log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 05:57:04 PM UTC 2026: 
 graph.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
d668795
Thu May 14 06:00:48 PM UTC 2026: 
 graph.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
bd5b079
Thu May 14 06:04:03 PM UTC 2026: 
 graph.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
aaec9ee
Thu May 14 06:09:55 PM UTC 2026: 
 graph.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  8|2
========================================
eda23f7
Thu May 14 06:13:00 PM UTC 2026: 
 graph.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  8|2
========================================
593c8cf
Thu May 14 06:15:51 PM UTC 2026: 
 graph.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:80:11: error: ‘edgeACtual’ undeclared (first use in this function); did you mean ‘edgeActual’?
   80 |     while(edgeACtual) {
      |           ^~~~~~~~~~
      |           edgeActual
graph.c:80:11: note: each undeclared identifier is reported only once for each function it appears in
5f54b33
Thu May 14 06:16:02 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
a657ece
Thu May 14 08:02:22 PM UTC 2026: 
 tests:  12|0
========================================
66ff408
